--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: 3.12.0
 
@@ -42,6 +42,6 @@ jobs:
         git config --local user.email "justin.dex@msg-david.de"
         git config --local user.name "GitHub Action"
         git add */VARIABLES.md
-        git commit -m "Add VARIABLES.md files"
+        git commit -s -m "Add VARIABLES.md files"
         git push
       working-directory: ${{ github.workspace }}
