--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: 3.12.0
 
@@ -28,7 +28,11 @@ jobs:
     - name: Check for changes
       id: check_changes
       run: |
-        git diff --quiet || { echo "changes found"; echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT; }
+        if git status --porcelain | grep "VARIABLES.md"; then
+          echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
+        else
+          echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
+        fi
       continue-on-error: true
       working-directory: ${{ github.workspace }}
 
@@ -38,6 +42,6 @@ jobs:
         git config --local user.email "justin.dex@msg-david.de"
         git config --local user.name "GitHub Action"
         git add */VARIABLES.md
-        git commit -m "Add VARIABLES.md files"
+        git commit -s -m "Add VARIABLES.md files"
         git push
       working-directory: ${{ github.workspace }}
