--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,7 +11,7 @@
 
 # scenario directory (Rico AND Justin)
 /scenario @rcrswld
-/scenario @JustinDxx
+/scenario @robertschubert
 
 # sensor directory (Rico AND Justin)
 /sensor @rcrswld
