Fixed prefix letter case. Changed Justin to Robert in Codeowners.
Signed-off-by: Fin Heuer <fin.heuer@dlr.de>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,7 +9,7 @@
 # examples directory (Robert OR Justin)
 /examples @robertschubert @JustinDxx
 
-# scenario directory (Rico AND Justin)
+# scenario directory (Rico AND Robert)
 /scenario @rcrswld
 /scenario @robertschubert
 
