Added to CODEOWNERS
Signed-off-by: Fin Heuer <fin.heuer@dlr.de>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,9 +9,10 @@
 # examples directory (Robert OR Justin)
 /examples @robertschubert @JustinDxx
 
-# scenario directory (Rico AND Robert)
+# scenario directory (Rico AND Robert AND Fin)
 /scenario @rcrswld
 /scenario @robertschubert
+/scenario @heuerfin
 
 # sensor directory (Rico AND Justin)
 /sensor @rcrswld
