--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -30,3 +30,7 @@
 # environment-model directory (Mirco AND Robert)
 /environment-model @robertschubert
 /environment-model @MircoNierenz
+
+# general directory (Mirco AND Robert)
+/environment-model @robertschubert
+/environment-model @MircoNierenz
