fix folder name -> general

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,5 +32,5 @@
 /environment-model @MircoNierenz
 
 # general directory (Mirco AND Robert)
-/environment-model @robertschubert
-/environment-model @MircoNierenz
+/general @robertschubert
+/general @MircoNierenz
