Adding the Surface-model Ontology (#14)
* Adding the Surface-model Ontology

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* updated ontology and shacl-files

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* rename lowercase

* add subcategories
add string types
ad georeference shape

* remove local class definitions - use from general/georeference ontology

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* georeference optional

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* camelCase path for main categories

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* rename folder to lower case

* rename folder lowercase

* rename namespace to surface-model
add gx prefix and add Resource as subClassOf

* corrected ß to fit to UTF-8

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* change to platformExists, rampExists

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* add subcategory string part : change to dataType, formatType

* use DataResource

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* use surface-model is comment

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* remove ^^xsd:float

* rename to surface-model...

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* remove gx
add GeneralShape
add GeoreferenceShape from ontology
remove local GeoreferenceShape

* add Sebastian AND Robert for surface-model folder

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* fix PascalCase

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* add surface-model-instance.json

---------

Signed-off-by: jtdemer <johannes.demer@asc-s.de>
Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>
Signed-off-by: GitHub Action <justin.dex@msg-david.de>
Co-authored-by: Mirco <Mirco.Nierenz@triangraphics.de>
Co-authored-by: sch

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -40,3 +40,6 @@
 /georeference @robertschubert
 /georeference @3Dbastian @MircoNierenz
 
+# surface-model directory (Sebastian AND Robert)
+/surface-model @robertschubert
+/surface-model @3Dbastian
