Ontology_HD-Map (#4)
* Adding the General Ontology to Ontology_General. The ontology was created on 02/27/2014 with the latest version of the Ontology Creator and uses the current Excel file as input: Metadata, which was created in collaboration with all data providers from the GAIA-X4PLCC-AAD project and can now be merged into the main branch.

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* Adding the HD-Map Ontology to Ontology_HD-Map. The ontology was created on 02/27/2014 with the latest version of the Ontology Creator and uses the current Excel file as input: Metadata, which was created in collaboration with all data providers from the GAIA-X4PLCC-AAD project and can now be merged into the main branch.

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* Adding the HD-Map Ontology

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* updated ontology and shacl-files

Signed-off-by: jtdemer <johannes.demer@asc-s.de>

* rename lowercase

* update with fix naming convections
add GeorefenceShape
add more string enums

* add maxcount

* fix frequency of georeference

* fix naming convention issues

* remove local class definitions - use from general/georeference ontology

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* georeference optinal

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* fix gx namespace

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* switch georeference naming for path and node

Signed-off-by: Mirco <Mirco.Nierenz@triangraphics.de>

* remove float

* add Range2DShape

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* remove gx prefix
add GeneralShape as node
move trafficDirection to content subcat
remove GeneralShape
remove Range2DShape

* add Sebastian AND Robert for hdmap folder

* Add VARIABLES.md files

Signed-off-by: GitHub Action <justin.dex@msg-david.de>

* fix georeference mincount


--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,6 +32,10 @@
 /environment-model @robertschubert
 /environment-model @MircoNierenz
 
+# hdmap directory (Sebastian AND Robert)
+/hdmap @robertschubert
+/hdmap @3Dbastian
+
 # general directory (Mirco AND Robert)
 /general @robertschubert
 /general @MircoNierenz
@@ -43,3 +47,4 @@
 # surface-model directory (Sebastian AND Robert)
 /surface-model @robertschubert
 /surface-model @3Dbastian
+
