--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,10 +9,9 @@
 # examples directory (Robert OR Justin)
 /examples @robertschubert @JustinDxx
 
-# scenario directory (Rico AND Robert AND Fin)
-/scenario @rcrswld
+# scenario directory (Rico OR Fin AND Robert)
+/scenario @rcrswld @heuerfin
 /scenario @robertschubert
-/scenario @heuerfin
 
 # sensor directory (Rico AND Justin)
 /sensor @rcrswld
