--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -1,4 +1,4 @@
-name: Create VARIABLES.md file on change within Branch
+name: CI pipeline
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   create-file:
+    name: Create VARIABLES.md file on change within Branch
     runs-on: ubuntu-latest
 
     steps:
@@ -47,6 +48,7 @@ jobs:
       working-directory: ${{ github.workspace }}
 
   parse-turtle:
+    name: Check syntax of all changed Turtle files
     runs-on: ubuntu-latest
 
     steps:
