--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -1,4 +1,4 @@
-name: Create VARIABLES.md file on change within Branch
+name: CI pipeline
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   create-file:
+    name: Create VARIABLES.md file on change within Branch
     runs-on: ubuntu-latest
 
     steps:
@@ -18,8 +19,8 @@ jobs:
       with:
         python-version: 3.12.0
 
-    - name: Install rdflib
-      run: pip install rdflib
+    - name: Install additional libraries
+      run: pip install -r src/requirements_ci.txt
 
     - name: Run Python script
       run: python3 src/readme_generator.py
@@ -45,3 +46,82 @@ jobs:
         git commit -s -m "Add VARIABLES.md files"
         git push
       working-directory: ${{ github.workspace }}
+
+  parse-turtle:
+    name: Check syntax of all changed Turtle files
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check for changes in .ttl files
+        id: check_ttl
+        run: |
+          git fetch origin main
+          CHANGED_TTL=$(git diff --name-only origin/main -- '*.ttl')
+          if [[ -n "$CHANGED_TTL" ]]; then
+            echo "TTL_HAS_CHANGED=true" >> $GITHUB_ENV
+            echo "CHANGED_TTL=$CHANGED_TTL" >> $GITHUB_ENV
+          else
+            echo "TTL_HAS_CHANGED=false" >> $GITHUB_ENV
+            echo "Subsequent steps will be skipped as no .ttl files have changed."
+          fi
+
+      - name: Set up Python
+        if: env.TTL_HAS_CHANGED == 'true'
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12.0
+
+      - name: Install additional libraries
+        if: env.TTL_HAS_CHANGED == 'true'
+        run: pip install -r src/requirements_ci.txt
+
+      - name: Run Python script for each changed .ttl file
+        if: env.TTL_HAS_CHANGED == 'true'
+        run: |
+          for FILE in ${CHANGED_TTL}; do
+            echo "Processing changed file: ${FILE}"
+            python3 -u src/check_ttl_syntax.py "${FILE}"
+          done
+
+  check-jsonld-against-schema:
+    name: Check jsonld against schema for all changed directories
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check for changes in .ttl and .json files
+        id: check_ttl_or_instance
+        run: |
+          git fetch origin main
+          CHANGED_FILES=$(git diff --name-only origin/main -- '*shacl.ttl' '*instance.json')
+          if [[ -n "$CHANGED_FILES" ]]; then
+            CHANGED_DIRS=$(echo "$CHANGED_FILES" | xargs -n1 dirname | sort -u) # just save the directory names
+            echo "FILES_HAVE_CHANGED=true" >> $GITHUB_ENV
+            echo "CHANGED_DIRS=$CHANGED_DIRS" >> $GITHUB_ENV
+          else
+            echo "FILES_HAVE_CHANGED=false" >> $GITHUB_ENV
+            echo "Subsequent steps will be skipped as no .ttl or .json files have changed."
+          fi
+
+      - name: Set up Python
+        if: env.FILES_HAVE_CHANGED == 'true'
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12.0
+
+      - name: Install additional libraries
+        if: env.FILES_HAVE_CHANGED == 'true'
+        run: pip install -r src/requirements_ci.txt
+
+      - name: Run Python script for each directory that is affected (either shacl or instance file was changed).
+        if: env.FILES_HAVE_CHANGED == 'true'
+        run: |
+          for DIRECTORY in ${CHANGED_DIRS}; do
+            echo "Processing changed directory: ${DIRECTORY}"
+            python3 -u src/check_jsonld_against_shacl_schema.py "${DIRECTORY}"
+          done
