--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -103,7 +103,7 @@ jobs:
           if [[ -n "$CHANGED_FILES" ]]; then
             CHANGED_DIRS=$(echo "$CHANGED_FILES" | xargs -n1 dirname | sort -u) # just save the directory names
             echo "FILES_HAVE_CHANGED=true" >> $GITHUB_ENV
-            echo "CHANGED_DIRS=$(echo "CHANGED_DIRS" | tr '\n' ' ')" >> $GITHUB_ENV # save directories in one line
+            echo "CHANGED_DIRS=$(echo "$CHANGED_DIRS" | tr '\n' ' ')" >> $GITHUB_ENV # save directories in one line
           else
             echo "FILES_HAVE_CHANGED=false" >> $GITHUB_ENV
             echo "Subsequent steps will be skipped as no .ttl or .json files have changed."
