--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -62,7 +62,7 @@ jobs:
           CHANGED_TTL=$(git diff --name-only origin/main -- '*.ttl')
           if [[ -n "$CHANGED_TTL" ]]; then
             echo "TTL_HAS_CHANGED=true" >> $GITHUB_ENV
-            echo "CHANGED_TTL=$CHANGED_TTL" >> $GITHUB_ENV
+            echo "CHANGED_TTL=$(echo "$CHANGED_TTL" | tr '\n' ' ')" >> $GITHUB_ENV # save files in one line
           else
             echo "TTL_HAS_CHANGED=false" >> $GITHUB_ENV
             echo "Subsequent steps will be skipped as no .ttl files have changed."
@@ -81,6 +81,7 @@ jobs:
       - name: Run Python script for each changed .ttl file
         if: env.TTL_HAS_CHANGED == 'true'
         run: |
+          IFS=' ' # Set the Internal Field Separator to a space
           for FILE in ${CHANGED_TTL}; do
             echo "Processing changed file: ${FILE}"
             python3 -u src/check_ttl_syntax.py "${FILE}"
@@ -102,7 +103,7 @@ jobs:
           if [[ -n "$CHANGED_FILES" ]]; then
             CHANGED_DIRS=$(echo "$CHANGED_FILES" | xargs -n1 dirname | sort -u) # just save the directory names
             echo "FILES_HAVE_CHANGED=true" >> $GITHUB_ENV
-            echo "CHANGED_DIRS=$CHANGED_DIRS" >> $GITHUB_ENV
+            echo "CHANGED_DIRS=$(echo "$CHANGED_DIRS" | tr '\n' ' ')" >> $GITHUB_ENV # save directories in one line
           else
             echo "FILES_HAVE_CHANGED=false" >> $GITHUB_ENV
             echo "Subsequent steps will be skipped as no .ttl or .json files have changed."
@@ -121,6 +122,7 @@ jobs:
       - name: Run Python script for each directory that is affected (either shacl or instance file was changed).
         if: env.FILES_HAVE_CHANGED == 'true'
         run: |
+          IFS=' ' # Set the Internal Field Separator to a space
           for DIRECTORY in ${CHANGED_DIRS}; do
             echo "Processing changed directory: ${DIRECTORY}"
             python3 -u src/check_jsonld_against_shacl_schema.py "${DIRECTORY}"
