Update CODEOWNERS for ositrace
Signed-off-by: Pierre R. Mai <pmai@pmsf.de>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -47,3 +47,6 @@
 /surface-model @robertschubert
 /surface-model @3Dbastian
 
+# ositrace directory (Pierre AND Robert)
+/ositrace @robertschubert
+/ositrace @pmai
