First draft of an ontology for services and for the sensor failure simulation service, WIP

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -43,6 +43,14 @@
 /georeference @robertschubert
 /georeference @3Dbastian @MircoNierenz
 
+# service directory (Valentin AND Robert)
+/service @robertschubert
+/service @ValentinFischerTT
+
+# sensor-failure-simulation directory (Valentin AND Robert)
+/sensor-failure-simulation @robertschubert
+/sensor-failure-simulation @ValentinFischerTT
+
 # surface-model directory (Sebastian AND Robert)
 /surface-model @robertschubert
 /surface-model @3Dbastian
