--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -43,6 +43,10 @@
 /georeference @robertschubert
 /georeference @3Dbastian @MircoNierenz
 
+# service directory (Valentin AND Robert)
+/service @robertschubert
+/service @ValentinFischerTT
+
 # surface-model directory (Sebastian AND Robert)
 /surface-model @robertschubert
 /surface-model @3Dbastian
