--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -43,10 +43,6 @@
 /georeference @robertschubert
 /georeference @3Dbastian @MircoNierenz
 
-# service directory (Valentin AND Robert)
-/service @robertschubert
-/service @ValentinFischerTT
-
 # surface-model directory (Sebastian AND Robert)
 /surface-model @robertschubert
 /surface-model @3Dbastian
@@ -55,6 +51,11 @@
 /ositrace @robertschubert
 /ositrace @pmai
 
-# leakage-test directory (Selcan AND Robert Or Lena)
-/leakage-test @selcan-k
-/leakage-test @robertschubert @lenasauermann
+# marketplaceResource directory (Robert AND Johannes)
+/marketplaceResource @robertschubert
+/marketplaceResource @jtdemer
+
+# bundleData directory (Robert AND Johannes)
+/bundleData @robertschubert
+/bundleData @jtdemer
+
