add separat LicenseShape
Signed-off-by: jtdemer <johannes.demer@asc-s.de>

--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -32,20 +32,6 @@
         }
       }
     ],
-    "manifest:spdxIdentifier": {
-      "@value": "MIT",
-      "@type": "xsd:string"
-    },
-    "manifest:licenseData": {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "license",
-      "manifest:format": "html",
-      "manifest:path": {
-        "@value": "https://opensource.org/license/mit",
-        "@type": "xsd:anyURI"
-      }
-    },
     "manifest:contentData": [
       {
       "@type": "manifest:Link",
@@ -158,5 +144,22 @@
       }
     }
    ]
+  }
+  "manifest:license": {
+    "@type": "manifest:License",
+    "manifest:spdxIdentifier": {
+      "@value": "MIT",
+      "@type": "xsd:string"
+    },
+    "manifest:licenseData": {
+      "@type": "manifest:Link",
+      "manifest:accessRole": "publicUser",
+      "manifest:type": "license",
+      "manifest:format": "html",
+      "manifest:path": {
+        "@value": "https://opensource.org/license/mit",
+        "@type": "xsd:anyURI"
+      }
+    }
   }
 }
