--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -1,149 +1,130 @@
 {
   "@context": {
-    "xsd": "http://www.w3.org/2001/XMLSchema#",
     "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#",
-    "skos": "http://www.w3.org/2004/02/skos/core#",
     "sh": "http://www.w3.org/ns/shacl#",
-    "manifest": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/"
+    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
+    "manifest": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/",
+    "xsd": "http://www.w3.org/2001/XMLSchema#",
+    "skos": "http://www.w3.org/2004/02/skos/core#"
   },
-  "@id": "did:web:registry.gaia-x.eu:Manifest:ZNh9Z-tHQpkpxJhNobhUVmauYxrfTAZdQy9L",
+  "@id": "did:web:registry.gaia-x.eu:Manifest:oZVLOL-U0-HEQukff3Oj5V6xmuozZMykqVH2",
   "@type": "manifest:Manifest",
   "manifest:data": {
     "@type": "manifest:Data",
-    "manifest:assetData": [
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": "owner",
-        "manifest:type": "assetData",
-        "manifest:format": "xodr",
-        "manifest:path": {
+    "manifest:assetData": {
+      "@type": "manifest:Link",
+      "manifest:accessRole": "owner",
+      "manifest:type": "assetData",
+      "manifest:fileMetaData": {
+        "@type": "manifest:FileMetaData",
+        "manifest:uri": {
           "@value": "./data/TestfeldNiedersachsen_ALKS_ODR_sample.xodr",
           "@type": "xsd:anyURI"
+        },
+        "manifest:hash": {
+          "@value": "QmPg2xq9HAH45tF9EhLfGpYvtjhRL1LnB2jrHx7WUxKDzg",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "application/x-xodr",
+          "@type": "xsd:string"
+        },
+        "manifest:fileSize": 636,
+        "manifest:filename": {
+          "@value": "TestfeldNiedersachsen_ALKS_ODR_sample.xodr",
+          "@type": "xsd:string"
+        }
+      }
+    },
+    "manifest:contentData": [
+      {
+        "@type": "manifest:Link",
+        "manifest:accessRole": "publicUser",
+        "manifest:type": "metadata",
+        "manifest:fileMetaData": {
+          "@type": "manifest:FileMetaData",
+          "manifest:uri": {
+            "@value": "./metadata/domainMetadata.json",
+            "@type": "xsd:anyURI"
+          },
+          "manifest:hash": {
+            "@value": "QmPg2xq9HAH45tF9EhLfGpYvtjhRL1LnB2jrHx7WUxKDzg",
+            "@type": "xsd:string"
+          },
+          "manifest:mimeType": {
+            "@value": "text/html",
+            "@type": "xsd:string"
+          },
+          "manifest:fileSize": 148,
+          "manifest:filename": {
+            "@value": "domainMetadata.json",
+            "@type": "xsd:string"
+          }
         }
       },
       {
         "@type": "manifest:Link",
-        "manifest:accessRole": "owner",
-        "manifest:type": "assetData",
-        "manifest:format": "xodr",
-        "manifest:path": {
-          "@value": "./data/TestfeldNiedersachsen_ALKS_ODR_sample_offset.xodr",
-          "@type": "xsd:anyURI"
+        "manifest:accessRole": "registeredUser",
+        "manifest:type": "visualization",
+        "manifest:fileMetaData": {
+          "@type": "manifest:FileMetaData",
+          "manifest:uri": {
+            "@value": "./visualization/detailRoadNetwork.geojson",
+            "@type": "xsd:anyURI"
+          },
+          "manifest:hash": {
+            "@value": "QmPg2xq9HAH45tF9EhLfGpYvtjhRL1LnB2jrHx7WUxKDzg",
+            "@type": "xsd:string"
+          },
+          "manifest:mimeType": {
+            "@value": "application/x-geojson",
+            "@type": "xsd:string"
+          },
+          "manifest:fileSize": 2548,
+          "manifest:filename": {
+            "@value": "detailRoadNetwork.geojson",
+            "@type": "xsd:string"
+          }
+        }
+      },
+      {
+        "@type": "manifest:Link",
+        "manifest:accessRole": "publicUser",
+        "manifest:type": "visualization",
+        "manifest:fileMetaData": {
+          "@type": "manifest:FileMetaData",
+          "manifest:uri": {
+            "@value": "./visualization/TestfeldNiedersachsen_ALKS_ODR_sample_01.png",
+            "@type": "xsd:anyURI"
+          },
+          "manifest:hash": {
+            "@value": "QmPg2xq9HAH45tF9EhLfGpYvtjhRL1LnB2jrHx7WUxKDzg",
+            "@type": "xsd:string"
+          },
+          "manifest:mimeType": {
+            "@value": "image/png",
+            "@type": "xsd:string"
+          },
+          "manifest:dimensions": {
+            "@type": "manifest:Dimensions",
+            "manifest:unit": "pixels",
+            "manifest:width": {
+              "@value": "1095",
+              "@type": "xsd:decimal"
+            },
+            "manifest:length": {
+              "@value": "850",
+              "@type": "xsd:decimal"
+            }
+          },
+          "manifest:fileSize": 2400256,
+          "manifest:filename": {
+            "@value": "TestfeldNiedersachsen_ALKS_ODR_sample_01.png",
+            "@type": "xsd:string"
+          }
         }
       }
-    ],
-    "manifest:contentData": [
-      {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "metadata",
-      "manifest:format": "json",
-      "manifest:path": {
-        "@value": "./metadata/domainMetadata.json",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "metadata",
-      "manifest:format": "json",
-      "manifest:path": {
-        "@value": "./metadata/gxMetadata.json",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "registeredUser",
-      "manifest:type": "documentation",
-      "manifest:format": "pdf",
-      "manifest:path": {
-        "@value": "./documentation/TestfeldNiedersachsen_ALKS_ODR_sample_Documentation.pdf",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "registeredUser",
-      "manifest:type": "documentation",
-      "manifest:format": "txt",
-      "manifest:path": {
-        "@value": "./documentation/TestfeldNiedersachsen_ALKS_ODR_sample_Documentation_stats.txt",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "registeredUser",
-      "manifest:type": "validation",
-      "manifest:format": "txt",
-      "manifest:path": {
-        "@value": "./validation/qcReport.txt",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "visualization",
-      "manifest:format": "png",
-      "manifest:path": {
-        "@value": "./visualization/TestfeldNiedersachsen_ALKS_ODR_sample_01.png",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "visualization",
-      "manifest:format": "png",
-      "manifest:path": {
-        "@value": "./visualization/TestfeldNiedersachsen_ALKS_ODR_sample_02.png",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "visualization",
-      "manifest:format": "png",
-      "manifest:path": {
-        "@value": "./visualization/TestfeldNiedersachsen_ALKS_ODR_sample_03.png",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "visualization",
-      "manifest:format": "geojson",
-      "manifest:path": {
-        "@value": "./visualization/bbox.geojson",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "publicUser",
-      "manifest:type": "visualization",
-      "manifest:format": "geojson",
-      "manifest:path": {
-        "@value": "./visualization/roadNetwork.geojson",
-        "@type": "xsd:anyURI"
-      }
-    },
-    {
-      "@type": "manifest:Link",
-      "manifest:accessRole": "registeredUser",
-      "manifest:type": "visualization",
-      "manifest:format": "geojson",
-      "manifest:path": {
-        "@value": "./visualization/detailRoadNetwork.geojson",
-        "@type": "xsd:anyURI"
-      }
-    }
-   ]
+    ]
   },
   "manifest:license": {
     "@type": "manifest:License",
@@ -155,10 +136,16 @@
       "@type": "manifest:Link",
       "manifest:accessRole": "publicUser",
       "manifest:type": "license",
-      "manifest:format": "html",
-      "manifest:path": {
-        "@value": "https://opensource.org/license/mit",
-        "@type": "xsd:anyURI"
+      "manifest:fileMetaData": {
+        "@type": "manifest:FileMetaData",
+        "manifest:uri": {
+          "@value": "https://opensource.org/license/mit",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:mimeType": {
+          "@value": "text/html",
+          "@type": "xsd:string"
+        }
       }
     }
   }
