--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -13,11 +13,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+          fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.12.0
+        python-version: '3.12'
 
     - name: Install additional libraries
       run: pip install -r src/requirements_ci.txt
@@ -29,7 +31,7 @@ jobs:
     - name: Check for changes
       id: check_changes
       run: |
-        if git status --porcelain | grep "VARIABLES.md"; then
+        if git diff --name-only --exit-code -- */VARIABLES.md; then
           echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
         else
           echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
@@ -40,12 +42,14 @@ jobs:
     - name: Commit and push changes
       if: steps.check_changes.outputs.CHANGES_FOUND == 'true'
       run: |
-        git config --local user.email "justin.dex@msg-david.de"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "GitHub Action"
         git add */VARIABLES.md
         git commit -s -m "Add VARIABLES.md files"
         git push
       working-directory: ${{ github.workspace }}
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   parse-turtle:
     name: Check syntax of all changed Turtle files
@@ -59,7 +63,7 @@ jobs:
         id: check_ttl
         run: |
           git fetch origin main
-          CHANGED_TTL=$(git diff --name-only origin/main -- '*.ttl')
+          CHANGED_TTL=$(git diff --name-only --diff-filter=d origin/main -- '*.ttl')
           if [[ -n "$CHANGED_TTL" ]]; then
             echo "TTL_HAS_CHANGED=true" >> $GITHUB_ENV
             echo "CHANGED_TTL=$(echo "$CHANGED_TTL" | tr '\n' ' ')" >> $GITHUB_ENV # save files in one line
