--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Check for changes
       id: check_changes
       run: |
-        if git diff --name-only --exit-code -- */VARIABLES.md; then
+        if git status --porcelain | grep "VARIABLES.md"; then
           echo "CHANGES_FOUND=true" >> $GITHUB_OUTPUT
         else
           echo "CHANGES_FOUND=false" >> $GITHUB_OUTPUT
@@ -103,7 +103,7 @@ jobs:
         id: check_ttl_or_instance
         run: |
           git fetch origin main
-          CHANGED_FILES=$(git diff --name-only origin/main -- '*shacl.ttl' '*instance.json')
+          CHANGED_FILES=$(git diff --name-only --diff-filter=d origin/main -- '*shacl.ttl' '*instance.json')
           if [[ -n "$CHANGED_FILES" ]]; then
             CHANGED_DIRS=$(echo "$CHANGED_FILES" | xargs -n1 dirname | sort -u) # just save the directory names
             echo "FILES_HAVE_CHANGED=true" >> $GITHUB_ENV
