add manifest readme
Signed-off-by: jdsika <carlo.van-driesten@vdl.digital>

--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -37,6 +37,16 @@
           }
       },
       "manifest:contentData": [
+         {
+            "@type": "manifest:Link",
+            "manifest:accessRole": "publicUser",
+            "manifest:type": "documentation",
+            "manifest:format": "md",
+            "manifest:path": {
+              "@value": "./README.md",
+              "@type": "xsd:anyURI"
+            }
+          },
           {
               "@type": "manifest:Link",
               "manifest:accessRole": "publicUser",
