--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -27,7 +27,7 @@
     },
     "manifest:license": {
       "@type": "manifest:License",
-      "manifest:spdxIdentifier": {
+      "gx:license": {
         "@value": "MIT",
         "@type": "xsd:string"
       },
