rework georeference ontology
Signed-off-by: jdsika <carlo.van-driesten@vdl.digital>

--- a/hdmap/manifest_reference.json
+++ b/hdmap/manifest_reference.json
@@ -9,7 +9,7 @@
   },
   "@id": "did:web:registry.gaia-x.eu:Manifest:oZVLOL-U0-HEQukff3Oj5V6xmuozZMykqVH2",
   "@type": "manifest:Manifest",
-  "manifest:hasManifest": {
+  "manifest:hasManifestReference": {
     "@type": "manifest:Link",
     "manifest:accessRole": "publicUser",
     "manifest:category": "manifest",
