--- a/manifest/manifest_instance.json
+++ b/manifest/manifest_instance.json
@@ -9,7 +9,7 @@
   },
   "@id": "did:web:registry.gaia-x.eu:Manifest:oZVLOL-U0-HEQukff3Oj5V6xmuozZMykqVH2",
   "@type": "manifest:Manifest",
-  "manifest:hasManifest": {
+  "manifest:hasManifestReference": {
     "@type": "manifest:Link",
     "manifest:accessRole": "publicUser",
     "manifest:category": "manifest",
